--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mysql2": "^3.11.4",
+    "nodemailer": "^6.9.16",
+    "serverless-dotenv-plugin": "^6.0.0",
     "serverless-http": "^3.2.0"
+  },
+  "devDependencies": {
+    "serverless-offline": "^14.3.4"
   }
 }
