chore : added serverless-plugin-split-stacks plugin

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mysql2": "^3.11.4",
     "nodemailer": "^6.9.16",
     "serverless-dotenv-plugin": "^6.0.0",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "serverless-plugin-split-stacks": "^1.14.0"
   },
   "devDependencies": {
     "serverless-offline": "^14.3.4"
