--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,44 +1,53 @@
-name: Deploy Lambda
+name: Build and Deploy SAM Application
 
 on:
   push:
     branches:
-      - master
+      - master # Trigger on push to the main branch
 
 jobs:
-  deploy:
-    name: deploy
+  build-and-deploy:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x]
-    steps:
 
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci --legacy-peer-deps
-    - name: serverless deploy
-      uses: serverless/github-action@master
-      with:
-        args: deploy
-      env:
-        SERVERLESS_ACCESS_KEY: ${{ vars.SERVERLESS_ACCESS_KEY }}
-        AWS_ACCESS_KEY_ID_ : ${{ vars.AWS_ACCESS_KEY_ID_}}
-        AWS_REGION_ : ${{ vars.AWS_REGION_}}
-        AWS_SECRET_ACCESS_KEY_ : ${{ vars.AWS_SECRET_ACCESS_KEY_}}
-        HR_EMAIL : ${{ vars.HR_EMAIL}}
-        ADMIN_EMAIL : ${{ vars.ADMIN_EMAIL}}
-        DB_HOST : ${{ vars.DB_HOST}}
-        DB_NAME : ${{ vars.DB_NAME}}
-        DB_PASSWORD : ${{ vars.DB_PASSWORD}}
-        DB_USER : ${{ vars.DB_USER}}
-        EMAIL_HOST : ${{ vars.EMAIL_HOST}}
-        EMAIL_PASS : ${{ vars.EMAIL_PASS}}
-        EMAIL_PORT : ${{ vars.EMAIL_PORT}}
-        EMAIL_SECURE : ${{ vars.EMAIL_SECURE}}
-        EMAIL_USER : ${{ vars.EMAIL_USER}}
-        JWT_SECRET : ${{ vars.JWT_SECRET}}
-        S3_BUCKET_NAME_ : ${{ vars.S3_BUCKET_NAME_}}
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          aws-access-key-id: ${{ vars.AWS_ACCESS_KEY_ID_ }}
+          aws-secret-access-key: ${{ vars.AWS_SECRET_ACCESS_KEY_ }}
+          aws-region: ap-south-1
+
+      - name: Install SAM CLI
+        run: |
+          pip install aws-sam-cli
+
+      - name: Build SAM Application
+        run: |
+          sam build
+
+      - name: Deploy SAM Application
+        run: |
+          sam deploy \
+            --stack-name firsttracksolutiontechnologies-backend \
+            --s3-bucket firsttracksolutiontechnologies-backend-sam \
+            --capabilities CAPABILITY_IAM \
+            --parameter-overrides \
+              AwsAccessKeyId=${{ vars.AWS_ACCESS_KEY_ID_ }} \
+              AwsRegion=ap-south-1 \
+              AwsSecretAccessKey=${{ vars.AWS_SECRET_ACCESS_KEY_ }} \
+              S3BucketName=${{ vars.S3_BUCKET_NAME_ }} \
+              HrEmail=${{ vars.HR_EMAIL }} \
+              AdminEmail=${{ vars.ADMIN_EMAIL }} \
+              DbHost=${{ vars.DB_HOST }} \
+              DbName=${{ vars.DB_NAME }} \
+              DbPassword=${{ vars.DB_PASSWORD }} \
+              DbUser=${{ vars.DB_USER }} \
+              EmailHost=${{ vars.EMAIL_HOST }} \
+              EmailPass=${{ vars.EMAIL_PASS }} \
+              EmailPort=${{ vars.EMAIL_PORT }} \
+              EmailSecure=${{ vars.EMAIL_SECURE }} \
+              EmailUser=${{ vars.EMAIL_USER }} \
+              JwtSecret=${{ vars.JWT_SECRET }}
