--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "description": "",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
     "nodemailer": "^6.9.16",
+    "serverless-dotenv-plugin": "^6.0.0",
     "serverless-http": "^3.2.0",
     "serverless-plugin-split-stacks": "^1.14.0"
+  },
+  "devDependencies": {
+    "serverless-offline": "^13.8.0"
   }
 }
